make output display correctly

--- a/index.html
+++ b/index.html
@@ -112,23 +112,25 @@
 
       <div id="output">
         <h2>Dear <span class="user"></span>, here is your suggested vacation destination:</h2>
-        <h3>Current Scoreboard:</h3>
+
+<!--    <h3>Current Scoreboard:</h3>
         <ul>
-          <li>Mountain: <span id=mtn></span></li>
+          <li>Mountain: <span id=mnt></span></li>
           <li>Beach: <span id=beach></span></li>
           <li>NYCity: <span id=city></span></li>
           <li>South: <span id=south></span></li>
-        </ul>
-        <div class=mtnWin>
+        </ul> -->
+
+        <div class=mntWin>
           <h3>Whitefish Montana</h3>
           <img class="float-right smaller-border" src="img/whitefish_town.jpg" alt="The town of Whitefish Montana"/>
           <p>A beautiful, authentic mountain town near Glacier National park, Whitefish exudes a laid-back atmosphere where you can enjoy the abundant snow, lakes, mountain scenery, and fantastic food.</p>
         </div>
 
         <div class=beachWin>
-          <h3>Hawaii</h3>
+          <h3>The Hawai'ian Islands</h3>
           <img class="float-right smaller-border" src="img/hawaii.jpg" alt="Island Paradise"/>
-          <p>A beautiful, authentic mountain town near Glacier National park, Whitefish exudes a laid-back atmosphere where you can enjoy the abundant snow, lakes, mountain scenery, and fantastic food.</p>
+          <p>With fresh, floral air and warm, tranquil waters, the breathtaking natural beauty of the six unique Hawai'ian Islands will provide an enticing and relaxing vacation experience.</p>
         </div>
 
         <div class=cityWin>
@@ -138,7 +140,7 @@
         </div>
 
         <div class=southWin>
-          <h3>New Orleans, Louisianna</h3>
+          <h3>New Orleans Louisiana</h3>
           <img class="float-right smaller-border" src="img/new_orleans.jpg" alt="New Orleans"/>
           <p>New Orleans is a fascinating and truly unique melting pot of culture, food and music. Experience one of America's most culturally and historically-rich destinations.</p>
         </div>
