Add maps, fix readme.md, add .fadeIn(), and other small tweaks to satisfy requirements.

--- a/index.html
+++ b/index.html
@@ -125,24 +125,28 @@
           <h3>Whitefish Montana</h3>
           <img class="float-right smaller-border" src="img/whitefish_town.jpg" alt="The town of Whitefish Montana"/>
           <p>A beautiful, authentic mountain town near Glacier National park, Whitefish exudes a laid-back atmosphere where you can enjoy the abundant snow, lakes, mountain scenery, and fantastic food.</p>
+          <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d132480.31516674152!2d-114.44009658309359!3d48.4296596551344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x536669ab14afecb5%3A0xccca7a6b8837463e!2sWhitefish%2C+MT+59937!5e1!3m2!1sen!2sus!4v1465953992734" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
         <div class=beachWin>
           <h3>The Hawai'ian Islands</h3>
           <img class="float-right smaller-border" src="img/hawaii.jpg" alt="Island Paradise"/>
           <p>With fresh, floral air and warm, tranquil waters, the breathtaking natural beauty of the six unique Hawai'ian Islands will provide an enticing and relaxing vacation experience.</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5986346.015218616!2d-159.74830942385987!3d20.450768731777437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7bffdb064f79e005%3A0x4b7782d274cc8628!2sHawaii!5e1!3m2!1sen!2sus!4v1465954065137" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
         <div class=cityWin>
           <h3>New York City</h3>
           <img class="float-right smaller-border" src="img/new_york_city_lights.jpg" alt="New York City"/>
           <p>New York City is a fast-paced, globally influential center of art, culture, fashion and finance. Where the Hudson River meets the Atlantic Ocean, "The Big Apple" is home to a fantastic array of interesting and iconic destinations, including the Empire State Building, Times Square, and the Statue of Liberty.</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d605414.7620372145!2d-74.25817770242662!3d40.70583164655193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY!5e1!3m2!1sen!2sus!4v1465954101622" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
         <div class=southWin>
           <h3>New Orleans Louisiana</h3>
           <img class="float-right smaller-border" src="img/new_orleans.jpg" alt="New Orleans"/>
           <p>New Orleans is a fascinating and truly unique melting pot of culture, food and music. Experience one of America's most culturally and historically-rich destinations.</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d691485.8468155069!2d-90.16367975826238!3d30.02105952713219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8620a454b2118265%3A0xdb065be85e22d3b4!2sNew+Orleans%2C+LA!5e1!3m2!1sen!2sus!4v1465954130130" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
